# Rust-CRUD-with-Diesel-Actix

./: Cargo.toml  crud.db
migrations/2024-05-12-100037_create_users/: up.sql
migrations/2024-05-12-145731_user_profile_image/: down.sql  up.sql
src/: main.rs  models.rs  routes.rs  schema.rs
