[package]
name = "rust-sqlite-api"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.1.6", features = ["sqlite", "r2d2"]}
actix-web = "4.5.1"
actix-rt = "2.9.0"
chrono = "0.4.38"
anyhow = "1.0.83"
dotenv = "0.15.0"
serde_json = "1.0.117"
serde = { version = "1.0.201", features = ["derive"]}